# servers

./: .gitignore  LICENSE  README.md  flake.nix  servers.cabal
app/: Main.hs
src/: BudgetChat.hs  InsecureSocketsLayer.hs  MeansToAnEnd.hs  MobInTheMiddle.hs  PrimeTime.hs  SmokeTest.hs  SpeedDaemon.hs
src/SpeedDaemon/: Client.hs  Protocol.hs  README.md  Server.hs  Types.hs
