cabal-version:      3.0
name:               servers
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sean O'Mara
maintainer:         mseanomara@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SmokeTest
                    , PrimeTime
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , network-simple
                    , aeson
                    , bytestring
                    , primes
    hs-source-dirs:   src
    default-language: Haskell2010
