cabal-version:      3.0
name:               servers
version:            0.1.0.0
author:             Sean O'Mara
maintainer:         mseanomara@gmail.com
build-type:         Simple

common options
    ghc-options: -Wall -O2

library
    import:           options
    exposed-modules:  SmokeTest
                    , PrimeTime
                    , MeansToAnEnd
                    , BudgetChat
                    , MobInTheMiddle
                    , SpeedDaemon
    other-modules:    SpeedDaemon.Types
                    , SpeedDaemon.Protocol
                    , SpeedDaemon.Server
                    , SpeedDaemon.Client
    build-depends:    base ^>=4.18.2.1
                    , network-simple
                    , aeson
                    , bytestring
                    , primes
                    , stm
                    , containers
                    , binary
                    , text
                    , async
    hs-source-dirs:   src
    default-language: Haskell2010

executable server-selector
    import:           options
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
                    , servers
    hs-source-dirs:   app
    default-language: Haskell2010
